# study-devops

./: .editorconfig  .gitattributes  .gitignore  README.md  cspell.json  notebook-requirements.txt
ansible/: .editorconfig  .gitignore  README.md  ansible.cfg  capture_1.sh  capture_2.sh  cspell.json  hosts  id_rsa  ping.sh  playbook_simple.yml  requirement.txt  requirements.txt  runcmd.sh  setup.sh  ssh_config
database/: .editorconfig  .gitignore  README.md
docker/: .editorconfig  .gitignore  README.md  cspell.json
docker/dockerfile/cpp/project/: CMakeLists.txt
docker/dockerfile/cpp/project/src/: main.cpp
elasticsearch/: .editorconfig  .gitignore  README.md  all-field.sh  analyze-string.sh  cat.sh  create-entity.sh  create-index.sh  cspell.json  delete-entity.sh  delete-index.sh  entity-create.sh  get-index-setting.sh  index-create.sh  index-get-settings.sh  index-set-settings.sh  query-by-bool.sh  query-by-certain-sources.sh  query-by-term.sh  query-multi-match.sh  query-simple.sh  query-with-source-in-result.sh  set-index-setting.sh
gradle/: .editorconfig  .gitattribute  .gitattributes  .gitignore  .markdownlint.json  README.md  build.gradle  cspell.json  depends.gradle  gradle.properties  requirements.txt  settings.gradle
jupyter/: README.md  requirements.txt
k8s/: .gitignore  README.md
kafka/: .editorconfig  .gitignore  README.md  cspell.json
locust/: .editorconfig  .gitignore  Pipfile  README.md  app.py  cspell.json  run-web  (+13 more)
tools/vscode/cpp/: .editorconfig  .gitignore  CMakeLists.txt  README.md
tools/vscode/cpp/src/: main.cpp  text.cpp  text.h
(+1055 files in other folders)
