CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
PROJECT(docker-cpp CXX C)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(PROJECT_NAME "docker-cpp")

INCLUDE_DIRECTORIES("/usr/local/include")
INCLUDE_DIRECTORIES("src")

SET(SRC_FILES
    src/main.cpp
 )

ADD_EXECUTABLE(${PROJECT_NAME}
        ${SRC_FILES})
